# quadra

./: .cvsignore  .gitignore  ChangeLog  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  README.win32  configure.ac  configure.in  quadra.rc  remtris3.dsp  remtris3.dsw  resources.txt
TkSnoop/: TkSnoop.pl
VisualC++/: .cvsignore  Quadra.vcproj  Quadra.vcxproj  Quadra2012.vcxproj  Skelton.vcproj  packages.config  quadra.dsp  quadra.dsw  quadra.rc  quadra.sln  quadra2003.sln  quadra2003.vcproj  quadra2012.sln  quadra2012.vcxproj  quadra_sdl.sln  res.bat  skelton.dsp  wadder.dsp  wadder.vcproj  wadder.vcxproj  wadder2003.vcproj  wadder2012.vcxproj
config/: .cvsignore  common.mk  compiler.mk  config.mk.in  rules.mk  target.mk  vars.mk
demos/: demo00.rec  demo01.rec  demo02.rec  demo03.rec
fonts/: courrier.fnt  font.fnt
help/: help.html  help_eng.html
images/: black.pcx  bloctemp.pcx  cursor.raw  debut0.raw  debut0f.raw  debut1.raw  debut1f.raw  debut2.raw  debut2f.raw  debut3.raw  debut3f.raw  debut4.raw  debut4f.raw  debut5.raw  debut5f.raw  debut6.raw  debut6f.raw  debut7.raw  debut7f.raw  debut8.raw  debutnr.raw  debuto.raw  debutof.raw  fond0.pcx  fond1.pcx  fond2.pcx  fond3.pcx  fond4.pcx  fond5.pcx  fond6.pcx  fond7.pcx  fond8.pcx  fond9.pcx  game_1.raw  game_2.raw  game_3.raw  game_4.raw  game_5.raw  gamelvup.raw  gamepaus.raw  (+84 more)
include/: .cvsignore  attack.h  bloc.h  canvas.h  cfgfile.h  chat_text.h  color.h  config.h  fonts.h  game.h  game_menu.h  global.h  highscores.h  menu.h  menu_base.h  menu_demo_central.h  misc.h  multi_player.h  multi_provider.h  net_list.h  net_server.h  net_stuff.h  nglog.h  packets.h  pane.h  player.h  qserv.h  quadra.h  recording.h  score.h  sons.h  stats.h  texte.h  update.h  version.h  zone.h  zone_list.h
server/: qserv.pl
server/plugins/: HTML.pm  Message.pm
skelton/: .cvsignore  ChangeLog  Makefile  README  rules.mk  skelton.dsp  vars.mk
skelton/common/: bitmap.cpp  buf.cpp  clipable.cpp  clock.cpp  command.cpp  crypt.cpp  crypt.pl  cursor.cpp  cursor_self.cpp  debug.cpp  dict.cpp  dir.mk  http_post.cpp  http_request.cpp  id.cpp  image_png.cpp  input_dumb.cpp  inter.cpp  listbox.cpp  net.cpp  notify.cpp  overmind.cpp  packet.cpp  pcx.cpp  pcx24.cpp  random.cpp  raw.cpp  res_compress.cpp  resfile.cpp  resmanager.cpp  reswriter.cpp  sprite.cpp  stringtable.cpp  unicode.cpp  url.cpp  vars.mk  video_dumb.cpp  zone_text_clock.cpp
skelton/config/: common.mk  compiler.mk  target.mk
skelton/directx/: dir.mk  error.cpp  find_file.cpp  input.cpp  main.cpp  music.cpp  palette.cpp  registry.cpp  res.cpp  sound.cpp  spawn.cpp  video.cpp  video_dx16.cpp  video_new.cpp
skelton/include/: array.h  bitmap.h  buf.h  byteorder.h  clipable.h  clock.h  command.h  crypt.h  cursor.h  cursor_self.h  cursor_x11.h  debug.h  dict.h  error.h  find_file.h  http_post.h  http_request.h  id.h  image.h  image_png.h  input.h  input_dumb.h  input_dx.h  input_keys.h  input_svga.h  input_x11.h  inter.h  listbox.h  main.h  music.h  net.h  net_buf.h  net_call.h  notify.h  overmind.h  packet.h  palette.h  pcx.h  pcx24.h  random.h  (+25 more)
skelton/lib/: dir.mk  rules.mk  vars.mk
skelton/svgalib/: cursor_x11.cpp  dir.mk  error.cpp  find_file.cpp  input.cpp  input_svga.cpp  input_x11.cpp  main.cpp  music.cpp  palette.cpp  registry.cpp  res.cpp  sound.cpp  vars.mk  video.cpp  video_svga.cpp  video_x11.cpp  video_x11_16.cpp  video_x11_24.cpp  video_x11_8.cpp  wraplib.cpp
skelton/svgalib/drivers/: drv_svga.cpp  vars.mk
skelton/test/: Makefile  cursor.raw  dynlib.cpp  ptestsound  sound.cpp  string.cpp  testmain.cpp  testpic.pcx
skelton/tools/: .cvsignore  dir.mk  dumpdb  dumpwad.cpp  rules.mk  vars.mk
skelton/tools/wadder/: .cvsignore  dir.mk  rules.mk  vars.mk  wadder.cpp  wadder.dsp
skelton/win32/: error.cpp  find_file.cpp  res.cpp
source/: .cvsignore  attack.h  bitmap.cc  bitmap.h  bloc.cc  bloc.cpp  bloc.h  buf.cc  buf.h  byteorder.h  canvas.cc  canvas.cpp  canvas.h  cfgfile.cpp  cfgfile.h  chat_text.cc  chat_text.cpp  chat_text.h  clipable.cc  clipable.cpp  clipable.h  clock.cc  clock.cpp  clock.h  color.cc  color.cpp  color.h  command.h  config.cpp  crypt.cc  crypt.h  cursor.cc  cursor.h  dict.cc  dict.h  dir.mk  dumpwad.cc  error.cc  error.h  fonts.cc  (+131 more)
stats/: RecReader.pm  decoder_ring.txt  listgames.pl  parserec.pl  snapshot.pl
stats/games/: 16linesingle.rec  183k.rec  20-liner.rec  2v2andyzlipvsnormdada12.rec  Buk14clean.rec  bigmove.rec  bob.rec  dBownsalltherestsuckass.rec  michvsn.rec  notime.rec  show0376.rec  show0690.rec  stephen-vs-alex.rec  stephen-vs-hfmich.rec
textes/: anglais.txt  francais.txt  gdesc_en.txt  gdesc_fr.txt  help_en.txt  help_fr.txt
